<resources>

  <!-- Application -->
  <string name="app_name">ListViewSimple</string>

  <!-- Application Menu -->
  <string name="action_menu_add_item">Add item</string>
  <string name="action_menu_delete_item">Delete item</string>
  <string name="action_menu_add_items">Add items</string>
  <string name="action_menu_delete_items">Delete items</string>
  <string name="action_menu_settings">Settings</string>

  <!-- ListView Adapter Labels -->
  <string name="tv_label_item_id">Item id: </string>
  <string name="tv_label_box_name">Box name: </string>
  <string name="tv_label_box_slot">Box slots: </string>
  <string name="tv_label_box_description">Box description: </string>

  <!-- ListView ItemBox Row -->
  <string name="tv_fake_data">Assigned on Run</string>

  <!-- EditBoxActivity -->
  <string name="button_save">Save</string>
  <string name="error_must_be_number">Field must be a number</string>
  <string name="error_cannot_be_empty">Field cannot be empty</string>

  <string name="toast_no_items_to_delete">There are no items to delete</string>
  <string name="toast_validation_error">Validation error</string>

  <string name="dialog_delete_items_title">Delete items</string>
  <string name="dialog_delete_items_confirm">Yes</string>
  <string name="dialog_delete_items_cancel">No</string>
  <string name="dialog_delete_items_content">Do you want to delete all items from list?</string>
  <string name="dialog_delete_item_title">Delete item</string>
  <string name="dialog_delete_item_content">Do you want to delete this item?</string>
  <string name="title_activity_main2">Main2Activity</string>

</resources>
