<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.koakh.listviewsimple.MainActivity">

  <item
    android:id="@+id/action_add_item"
    android:orderInCategory="100"
    android:title="@string/action_menu_add_item"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_delete_item"
    android:orderInCategory="100"
    android:title="@string/action_menu_delete_item"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_add_items"
    android:orderInCategory="100"
    android:title="@string/action_menu_add_items"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_menu_delete_items"
    android:orderInCategory="100"
    android:title="@string/action_menu_delete_items"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/action_menu_settings"
    app:showAsAction="never"/>

</menu>
